Following #1271: Fix for IOS devices. With "touch" value scrollbar is visible only when scrolling

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -100,7 +100,7 @@
 
 //overflow mobile y
 @mixin overflow-mobile() {
-  -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: auto;
 }
 
 // ----------------------------------------------------------------------------
